tests/rpm-pkgs/libftdi-1.5-2.fc35/output-exp@valgrind/scan-results.err
Error: COMPILER_WARNING (CWE-252):
libftdi1-1.5/examples/bitbang_cbus.c: scope_hint: In function 'main'
libftdi1-1.5/examples/bitbang_cbus.c:63:9: warning[-Wunused-result]: ignoring return value of 'fgets' declared with attribute 'warn_unused_result'
#   63 |         fgets(input, sizeof(input) - 1, stdin);
#      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   61|       {
#   62|           // Set bitmask from input
#   63|->         fgets(input, sizeof(input) - 1, stdin);
#   64|           if (input[0] == '\n') break;
#   65|           bitmask = strtol(input, NULL, 0);

Error: COMPILER_WARNING (CWE-477):
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c: scope_hint: In function '_wrap_usb_purge_rx_buffer'
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:6905:3: warning[-Wdeprecated-declarations]: 'ftdi_usb_purge_rx_buffer' is deprecated
# 6905 |   result = (int)ftdi_usb_purge_rx_buffer(arg1);
#      |   ^~~~~~
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:3192: included_from: Included from here.
libftdi1-1.5/src/ftdi.h:564:20: note: declared here
#  564 |     int DEPRECATED(ftdi_usb_purge_rx_buffer(struct ftdi_context *ftdi));
#      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
libftdi1-1.5/src/ftdi.h:247:55: note: in definition of macro 'DEPRECATED'
#  247 | #define DEPRECATED(func) __attribute__ ((deprecated)) func
#      |                                                       ^~~~
# 6903|     }
# 6904|     arg1 = (struct ftdi_context *)(argp1);
# 6905|->   result = (int)ftdi_usb_purge_rx_buffer(arg1);
# 6906|     resultobj = SWIG_From_int((int)(result));
# 6907|     return resultobj;

Error: COMPILER_WARNING (CWE-477):
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c: scope_hint: In function '_wrap_usb_purge_tx_buffer'
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:6928:3: warning[-Wdeprecated-declarations]: 'ftdi_usb_purge_tx_buffer' is deprecated
# 6928 |   result = (int)ftdi_usb_purge_tx_buffer(arg1);
#      |   ^~~~~~
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:3192: included_from: Included from here.
libftdi1-1.5/src/ftdi.h:565:20: note: declared here
#  565 |     int DEPRECATED(ftdi_usb_purge_tx_buffer(struct ftdi_context *ftdi));
#      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
libftdi1-1.5/src/ftdi.h:247:55: note: in definition of macro 'DEPRECATED'
#  247 | #define DEPRECATED(func) __attribute__ ((deprecated)) func
#      |                                                       ^~~~
# 6926|     }
# 6927|     arg1 = (struct ftdi_context *)(argp1);
# 6928|->   result = (int)ftdi_usb_purge_tx_buffer(arg1);
# 6929|     resultobj = SWIG_From_int((int)(result));
# 6930|     return resultobj;

Error: COMPILER_WARNING (CWE-477):
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c: scope_hint: In function '_wrap_usb_purge_buffers'
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:6951:3: warning[-Wdeprecated-declarations]: 'ftdi_usb_purge_buffers' is deprecated
# 6951 |   result = (int)ftdi_usb_purge_buffers(arg1);
#      |   ^~~~~~
libftdi1-1.5/redhat-linux-build/python/CMakeFiles/_ftdi1.dir/ftdi1PYTHON_wrap.c:3192: included_from: Included from here.
libftdi1-1.5/src/ftdi.h:566:20: note: declared here
#  566 |     int DEPRECATED(ftdi_usb_purge_buffers(struct ftdi_context *ftdi));
#      |                    ^~~~~~~~~~~~~~~~~~~~~~
libftdi1-1.5/src/ftdi.h:247:55: note: in definition of macro 'DEPRECATED'
#  247 | #define DEPRECATED(func) __attribute__ ((deprecated)) func
#      |                                                       ^~~~
# 6949|     }
# 6950|     arg1 = (struct ftdi_context *)(argp1);
# 6951|->   result = (int)ftdi_usb_purge_buffers(arg1);
# 6952|     resultobj = SWIG_From_int((int)(result));
# 6953|     return resultobj;
